Fixed Card alignment and added vote now button to candidate card

--- a/react-website-design/src/pages/CandidatesPage/Candidates.css
+++ b/react-website-design/src/pages/CandidatesPage/Candidates.css
@@ -12,8 +12,7 @@ html, body {
 .card-container {
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
-    max-width: 1440px;
+    max-width: 1240px;
 }
 
 .bio {
